# EnergyWatch

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: dddb41b73195_initial_schema.py
energywatch/: __init__.py  cli.py  scheduler.py
energywatch/analysis/: recommendations.py  stats.py
energywatch/db/: models.py  session.py
energywatch/notifications/: notifier.py
energywatch/scrapers/: base.py  energizect.py
energywatch/web/: app.py
energywatch/web/templates/: index.html
