[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energywatch"
version = "0.1.0"
description = "CT energy supplier rate monitoring and recommendation tool"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.40",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "click>=8.0",
    "rich>=13.0",
    "apscheduler>=3.10,<4.0",
    "pandas>=2.0",
    "python-dateutil>=2.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]

[project.scripts]
energywatch = "energywatch.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["energywatch*"]

[tool.setuptools.package-data]
energywatch = ["py.typed", "web/templates/*.html"]
